# linear-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  implementation-plan.md  output-improvements.md  rust-toolchain.toml  rustfmt.toml  test-bad-code.rs  test-clippy.rs  test-compile-error.rs  test-formatting.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/issues/: 01-api-validation-spike.md  02-workspace-setup.md  03-minimal-api-client.md  04-ci-pipeline.md  05-issues-list-command.md  06-table-formatting.md  07-json-output.md  08-query-filters.md  09-single-issue-view.md  10-error-handling-polish.md  11-oauth-authentication.md  12-additional-queries.md  13-search-functionality.md  14-create-issue-command.md  15-update-operations.md  16-bulk-operations.md  17-config-and-completions.md  18-performance-and-distribution.md
.github/workflows/: ci.yml  release.yml
docs/: INTEGRATION_PLAN_SEARCH.md  INTEGRATION_TEST_PLAN.md  consolidation-guide.md  inline-image-enhancements-plan.md  new-testing.md  phase1-checklist.md  plan.md  plan_implment_review.md  pre-commit.md  specs.md
linear-api-spike/: FINDINGS.md  schema.json  validate-api.js
linear-cli/: Cargo.toml
linear-cli/benches/: parsing.rs  rendering.rs  startup.rs
linear-cli/src/: aliases.rs  cli.rs  cli_output.rs  completions.rs  config.rs  constants.rs  frontmatter.rs  interactive.rs  lib.rs  main.rs  output.rs  preferences.rs  search.rs  templates.rs  tests.rs  types.rs
linear-cli/src/image_protocols/: cache.rs  conversion.rs  detection.rs  downloader.rs  iterm2.rs  kitty.rs  manager.rs  mod.rs  scaling.rs  url_validator.rs
linear-cli/src/snapshots/: linear_cli__output__tests__snapshot_colored_output.snap  linear_cli__output__tests__snapshot_empty_results.snap  linear_cli__output__tests__snapshot_long_titles.snap  linear_cli__output__tests__snapshot_noncolored_output.snap
linear-cli/tests/: alias_tests.rs  completions_tests.rs  config_tests.rs  integration_tests.rs
linear-sdk/: Cargo.toml  build.rs
linear-sdk/fixtures/: error_response.json  issues_response.json  viewer_response.json
linear-sdk/graphql/mutations/: create_attachment.graphql  create_comment.graphql  create_issue.graphql  create_issue_relation.graphql  update_issue.graphql
linear-sdk/graphql/queries/: comments.graphql  create_issue.graphql  issue.graphql  issues.graphql  my_work.graphql  projects.graphql  search_documents.graphql  search_issues.graphql  semantic_search.graphql  team_cycles.graphql  team_labels.graphql  team_states.graphql  teams.graphql  users.graphql  viewer.graphql
linear-sdk/src/: builder.rs  constants.rs  error.rs  executor.rs  graphql.rs  lib.rs  oauth.rs  retry.rs  storage.rs  test_helpers.rs
scripts/: check-commit-msg.py  dev-setup.sh  pre-commit-hook.sh  setup-env.sh
xtask/: Cargo.toml
xtask/src/: main.rs
