[workspace]
members = ["xtask", "linear-sdk", "linear-cli"]
resolver = "2"

[profile.release]
opt-level = "z"           # Optimize for size over speed
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip debug symbols
panic = "abort"          # Smaller panic handling (no unwinding)
