[workspace]
members = ["xtask", "linear-sdk", "linear-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Trevor Strieber <trevor.strieber@gmail.com>"]
license = "MIT"
repository = "https://github.com/TrevorS/linear-cli"
homepage = "https://github.com/TrevorS/linear-cli"
edition = "2021"

[profile.release]
opt-level = "z"           # Optimize for size over speed
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip debug symbols
panic = "abort"          # Smaller panic handling (no unwinding)
