[package]
name = "linear-cli"
description = "Fast command-line interface for Linear issue tracking"
keywords = ["linear", "cli", "issue-tracking", "productivity", "terminal"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
base64 = "0.22"
url = "2.5.0"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
sha2 = "0.10"
dirs = "6.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
const_format = "0.2"
env_logger = "0.11.8"
log = "0.4"
indicatif = "0.17.11"
linear-sdk = { version = "0.1.0", path = "../linear-sdk", features = ["oauth"] }
once_cell = "1.19"
owo-colors = "4.2.1"
phf = { version = "0.11", features = ["macros"] }
pulldown-cmark = "0.13.0"
regex = "1.10"
pulldown-cmark-mdcat = "2.7.1"
serde_yaml = "0.9"
secrecy = "0.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8"
clap_complete = "4.5"
syntect = "5.1"
tabled = { version = "0.20.0", features = ["ansi"] }
tokio = { version = "1.45.1", features = ["full"] }
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "tiff", "bmp"] }
crossterm = "0.29"
dialoguer = "0.11"
# Replaced atty with is_terminal_polyfill (already included via crossterm)

[dev-dependencies]
insta = "1.43.1"
serial_test = "3.2.0"
mockito = "1.7.0"
tempfile = "3.0"
criterion = { version = "0.6", features = ["html_reports"] }

[features]
default = ["oauth"]
oauth = ["linear-sdk/oauth"]
inline-images = []

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "parsing"
harness = false
