[package]
name = "linear-cli"
description = "Fast command-line interface for Linear issue tracking"
keywords = ["linear", "cli", "issue-tracking", "productivity", "terminal"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
url = "2.5.7"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
sha2 = "0.10"
dirs = "6.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
const_format = "0.2"
env_logger = "0.11.8"
log = "0.4"
indicatif = "0.18.0"
linear-sdk = { version = "0.1.0", path = "../linear-sdk", features = ["oauth"] }
once_cell = "1.21"
owo-colors = "4.2.2"
phf = { version = "0.13", features = ["macros"] }
pulldown-cmark = "0.13.0"
regex = "1.11"
pulldown-cmark-mdcat = "2.7.1"
serde_yaml = "0.9"
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9"
clap_complete = "4.5"
syntect = "5.3"
tabled = { version = "0.20.0", features = ["ansi"] }
tokio = { version = "1.46.1", features = ["full"] }
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "tiff", "bmp"] }
crossterm = "0.29"
dialoguer = "0.12"
# Replaced atty with is_terminal_polyfill (already included via crossterm)

[dev-dependencies]
insta = "1.43.2"
serial_test = "3.2.0"
mockito = "1.7.0"
tempfile = "3.23"
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = ["oauth"]
oauth = ["linear-sdk/oauth"]
inline-images = []

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "parsing"
harness = false
