[package]
name = "linear-cli"
description = "Fast command-line interface for Linear issue tracking"
keywords = ["linear", "cli", "issue-tracking", "productivity", "terminal"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
url = "2.5.8"
reqwest = { version = "0.12" }
dirs = "6.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
const_format = "0.2"
env_logger = "0.11.8"
log = "0.4"
indicatif = "0.18.3"
linear-sdk = { version = "0.2.0", path = "../linear-sdk", features = ["oauth"] }
once_cell = "1.21"
owo-colors = "4.2.3"
phf = { version = "0.12", features = ["macros"] }
pulldown-cmark = "0.13.0"
regex = "1.12"
pulldown-cmark-mdcat = "2.7.1"
serde_yaml = "0.9"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
clap_complete = "4.5"
syntect = "5.3"
tabled = { version = "0.20.0", features = ["ansi"] }
tokio = { version = "1.49.0", features = ["full"] }
crossterm = "0.29"
dialoguer = "0.12"
# Replaced atty with is_terminal_polyfill (already included via crossterm)

[dev-dependencies]
insta = "1.46.1"
serial_test = "3.3.1"
mockito = "1.7.1"
tempfile = "3.24"
criterion = { version = "0.8", features = ["html_reports"] }

[features]
default = ["oauth"]
oauth = ["linear-sdk/oauth"]

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "parsing"
harness = false
