[package]
name = "linear-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
reqwest = { version = "0.12.18", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }

# Enhanced error handling dependencies
http = "1.0"
eyre = "0.6"
color-eyre = "0.6"

# Builder pattern dependencies
typed-builder = "0.21"
secrecy = "0.10.2"

# GraphQL abstraction layer dependencies
async-trait = "0.1"
tracing = "0.1"
log = "0.4"

# OAuth dependencies (optional)
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest-blocking"], optional = true }
keyring = { version = "3", default-features = false, features = ["apple-native"], optional = true }
open = { version = "5.3.2", optional = true }
tiny_http = { version = "0.12.0", optional = true }
url = "2.5.0"

[dev-dependencies]
mockito = "1.7.0"

[build-dependencies]
graphql_client_codegen = "0.14.0"

[features]
default = []
oauth = ["oauth2", "keyring", "open", "tiny_http"]
integration-tests = []
