[package]
name = "xtask"
description = "Build automation tools for linear-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde_json = "1.0.140"
